syntax = "proto3";

option java_multiple_files = true;

package com.watts;

message TransactionPayload {
  string sourceTxnId = 1;
  string message = 2;
}

message PropagationResponse {
  int32 errorCode = 1;
}

service TransactionPropagationService {
  rpc sendTransaction(TransactionPayload) returns(PropagationResponse){}
}